finished crud with all types of relationhips

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "AllowedHosts": "*",
-  "FMPKey": "Insert key here",
+  "FMPKey": "Nk7L9iFGpI3HFxhZEmoPd6KytO7PLo26",
   "JWT": {
     "Issuer": "http://localhost:5246",
     "Audience": "http://localhost:5246",
